--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   get_it: ^7.6.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
-  fixed: ^4.0.1
+  decimal: ^2.3.3
   go_router: ^10.1.1
   sqflite: ^2.3.0
   path: ^1.8.3
