--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,13 @@ dependencies:
   go_router: ^10.1.1
   sqflite: ^2.3.0
   path: ^1.8.3
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.2
+  flutter_lints: ^2.0.3
 
   build_runner: ^2.4.6
   freezed: ^2.4.2
