--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,54 +1,20 @@
 analyzer:
-  errors:
-    invalid_annotation_target: ignore
-  plugins:
-    - style_guard
   exclude:
-    - "**/generated/**"
+    - "**/*.freezed.dart"
     - "**/*.g.dart"
-    - "**/firebase_options.dart"
+    - "**/generated/**"
+    - "lib/firebase_options.dart"
     - "test/**"
+#  language:
+#    strict-casts: true
+#    strict-inference: true
+#    strict-raw-types: true
+#  strong-mode:
+#    implicit-casts: false
 
-linter: # All rules https://dart.dev/tools/linter-rules/all
+linter: #
+  # All rules https://dart.dev/tools/linter-rules/all
   rules:
-    avoid_dynamic_calls: true
-    avoid_empty_else: true
-    avoid_print: true
-    avoid_relative_lib_imports: true
-    avoid_returning_null_for_future: true
-    avoid_slow_async_io: true
-    avoid_type_to_string: true
-    avoid_types_as_parameter_names: true
-    avoid_web_libraries_in_flutter: true
-    cancel_subscriptions: true
-    close_sinks: true
-    collection_methods_unrelated_type: true
-    comment_references: true
-    control_flow_in_finally: true
-    deprecated_member_use_from_same_package: true
-    empty_statements: true
-    hash_and_equals: true
-    implicit_reopen: true
-    invalid_case_patterns: true
-    literal_only_boolean_expressions: true
-    no_adjacent_strings_in_list: true
-    no_duplicate_case_values: true
-    no_logic_in_create_state: true
-    no_self_assignments: true
-    no_wildcard_variable_uses: true
-    prefer_relative_imports: true
-    prefer_void_to_null: true
-    test_types_in_equals: true
-    throw_in_finally: true
-    unnecessary_statements: true
-    unrelated_type_equality_checks: true
-    unsafe_html: true
-    use_build_context_synchronously: true
-    use_key_in_widget_constructors: true
-    valid_regexps: true
-    depend_on_referenced_packages: true
-    package_names: true
-    secure_pubspec_urls: true
     always_declare_return_types: true
     always_put_required_named_parameters_first: true
     always_require_non_null_named_parameters: true
@@ -57,6 +23,8 @@ linter: # All rules https://dart.dev/tools/linter-rules/all
     avoid_bool_literals_in_conditional_expressions: true
     avoid_catching_errors: true
     avoid_double_and_int_checks: true
+    avoid_dynamic_calls: true
+    avoid_empty_else: true
     avoid_equals_and_hash_code_on_mutable_classes: true
     avoid_escaping_inner_quotes: true
     avoid_field_initializers_in_const_classes: true
@@ -66,50 +34,78 @@ linter: # All rules https://dart.dev/tools/linter-rules/all
     avoid_js_rounded_ints: true
     avoid_multiple_declarations_per_line: true
     avoid_null_checks_in_equality_operators: true
+    avoid_print: true
     avoid_private_typedef_functions: true
     avoid_redundant_argument_values: true
+    avoid_relative_lib_imports: true
     avoid_renaming_method_parameters: true
     avoid_return_types_on_setters: true
     avoid_returning_null: true
+    avoid_returning_null_for_future: true
     avoid_returning_null_for_void: true
     avoid_returning_this: true
     avoid_shadowing_type_parameters: true
     avoid_single_cascade_in_expression_statements: true
+    avoid_slow_async_io: true
+    avoid_type_to_string: true
+    avoid_types_as_parameter_names: true
     avoid_types_on_closure_parameters: true
     avoid_unnecessary_containers: true
     avoid_unused_constructor_parameters: true
     avoid_void_async: true
+    avoid_web_libraries_in_flutter: true
     await_only_futures: true
     camel_case_extensions: true
     camel_case_types: true
+    cancel_subscriptions: true
     cast_nullable_to_non_nullable: true
+    close_sinks: true
+    collection_methods_unrelated_type: true
     combinators_ordering: true
+    comment_references: true
     conditional_uri_does_not_exist: true
     constant_identifier_names: true
+    control_flow_in_finally: true
     curly_braces_in_flow_control_structures: true
     dangling_library_doc_comments: true
+    depend_on_referenced_packages: true
     deprecated_consistency: true
+    deprecated_member_use_from_same_package: true
     directives_ordering: true
+
+    # Will enable when we will be ready
+    discarded_futures: false
+
     do_not_use_environment: true
     empty_catches: true
     empty_constructor_bodies: true
+    empty_statements: true
     eol_at_end_of_file: true
     exhaustive_cases: true
     file_names: true
     flutter_style_todos: true
+    hash_and_equals: true
     implementation_imports: true
     implicit_call_tearoffs: true
+    implicit_reopen: true
+    invalid_case_patterns: true
     join_return_with_assignment: true
     leading_newlines_in_multiline_strings: true
     library_annotations: true
     library_names: true
     library_prefixes: true
     library_private_types_in_public_api: true
+    literal_only_boolean_expressions: true
     matching_super_parameters: true
+    no_adjacent_strings_in_list: true
     no_default_cases: true
+    no_duplicate_case_values: true
     no_leading_underscores_for_library_prefixes: true
     no_leading_underscores_for_local_identifiers: true
     no_literal_bool_comparisons: true
+    no_logic_in_create_state: true
+    no_self_assignments: true
+    no_wildcard_variable_uses: true
     non_constant_identifier_names: true
     noop_primitive_operations: true
     null_check_on_nullable_type_parameter: true
@@ -117,6 +113,7 @@ linter: # All rules https://dart.dev/tools/linter-rules/all
     only_throw_errors: true
     overridden_fields: true
     package_api_docs: true
+    package_names: true
     package_prefixed_library_names: true
     prefer_adjacent_string_concatenation: true
     prefer_asserts_in_initializer_lists: true
@@ -146,21 +143,30 @@ linter: # All rules https://dart.dev/tools/linter-rules/all
     prefer_mixin: true
     prefer_null_aware_method_calls: true
     prefer_null_aware_operators: true
+    prefer_relative_imports: true
     prefer_single_quotes: true
     prefer_spread_collections: true
     prefer_typing_uninitialized_variables: true
+    prefer_void_to_null: true
     provide_deprecation_message: true
     recursive_getters: true
+    secure_pubspec_urls: true
     sized_box_for_whitespace: true
     sized_box_shrink_expand: true
     slash_for_doc_comments: true
     sort_child_properties_last: true
     sort_constructors_first: true
     sort_unnamed_constructors_first: true
+    test_types_in_equals: true
+    throw_in_finally: true
     tighten_type_of_initializing_formals: true
     type_annotate_public_apis: true
     type_init_formals: true
     type_literal_in_constant_pattern: true
+
+    # Will enable when we will be ready
+    unawaited_futures: false
+
     unnecessary_await_in_return: true
     unnecessary_brace_in_string_interps: true
     unnecessary_breaks: true
@@ -179,17 +185,22 @@ linter: # All rules https://dart.dev/tools/linter-rules/all
     unnecessary_overrides: true
     unnecessary_parenthesis: true
     unnecessary_raw_strings: true
+    unnecessary_statements: true
     unnecessary_string_escapes: true
     unnecessary_string_interpolations: true
     unnecessary_this: true
     unnecessary_to_list_in_spreads: true
     unreachable_from_main: true
+    unrelated_type_equality_checks: true
+    unsafe_html: true
+    use_build_context_synchronously: true
     use_colored_box: true
     use_decorated_box: true
     use_enums: true
     use_full_hex_values_for_flutter_colors: true
     use_function_type_syntax_for_parameters: true
     use_is_even_rather_than_modulo: true
+    use_key_in_widget_constructors: true
     use_late_for_private_fields_and_variables: true
     use_named_constants: true
     use_raw_strings: true
@@ -200,10 +211,10 @@ linter: # All rules https://dart.dev/tools/linter-rules/all
     use_super_parameters: true
     use_test_throws_matchers: true
     use_to_and_as_if_applicable: true
+    valid_regexps: true
     void_checks: true
-    discarded_futures: true
-    unawaited_futures: true
 
+    # Disabled rules
     prefer_double_quotes: false # We use single quotes for all
     always_use_package_imports: false # We use relative imports for all
     public_member_api_docs: false # We are too lazy to write docs
@@ -238,9 +249,10 @@ dart_code_metrics:
     line-length: 100
     cascading-widget-extensions: true
 
-  rules:
+  rules: #
     # Dart rules
     # All rules https://github.com/CQLabs/dart-code-metrics-presets/blob/main/lib/dart_all.yaml
+    avoid-substring: true
     avoid-banned-imports: true
     avoid-cascade-after-if-null: true
     avoid-collection-methods-with-unrelated-types: true
@@ -284,9 +296,17 @@ dart_code_metrics:
     format-test-name: true
     no-equal-switch-case: true
     no-equal-conditions: true
+
+    # Will enable when we will be ready
+    prefer-declaring-const-constructor: false
+
     prefer-explicit-parameter-names: true
     avoid-equal-expressions: true
     avoid-declaring-call-method: true
+
+    # Will enable when we will be ready
+    prefer-early-return: false
+
     avoid-missed-calls: true
     avoid-redundant-pragma-inline: true
     prefer-unwrapping-future-or: true
@@ -315,6 +335,10 @@ dart_code_metrics:
     no-equal-switch-expression-cases: true
     prefer-simpler-patterns-null-check: true
     avoid-duplicate-patterns: true
+
+    # Will enable when we will be ready
+    prefer-returning-conditional-expressions: false
+
     avoid-unnecessary-return: true
     avoid-future-tostring: true
     avoid-unassigned-late-fields-keyword: true
@@ -348,11 +372,15 @@ dart_code_metrics:
     match-class-name-pattern: true
     newline-before-case: true
     avoid-unnecessary-reassignment: true
-
+    avoid-referencing-discarded-variables: true
+    avoid-unconditional-break: true
+    avoid-weak-cryptographic-algorithms: true
+    avoid-identical-exception-handling-blocks: true
+    avoid-unnecessary-if: true
+    avoid-passing-default-values: true
 
     # Flutter rules
     # All rules https://github.com/CQLabs/dart-code-metrics-presets/blob/main/lib/flutter_all.yaml
-
     prefer-define-hero-tag: true
     always-remove-listener: true
     avoid-shrink-wrap-in-lists: true
@@ -378,8 +406,6 @@ dart_code_metrics:
 
 
     # Custom setups
-    prefer-early-return: true
-
     member-ordering:
       order:
         - constructors
@@ -388,7 +414,6 @@ dart_code_metrics:
         - final-fields
         - fields
         - methods
-        - close-method
         - dispose-method
       widgets-order:
         - constructor
@@ -399,15 +424,12 @@ dart_code_metrics:
         - init-state-method
         - build-method
         - methods
-        - close-method
         - dispose-method
 
-    arguments-ordering:
-          child-last: true
-
-    prefer-returning-conditional-expressions: true
-
-    prefer-declaring-const-constructor: true
+    # Will enable when we will be ready
+    arguments-ordering: false
+    #    arguments-ordering:
+    #      child-last: true
 
     prefer-single-widget-per-file:
       ignore-private-widgets: true
@@ -418,6 +440,8 @@ dart_code_metrics:
     prefer-widget-private-members:
       ignore-static: true
 
+
+    # Disabled rules
     ban-name: false # Deprecated
     avoid-async-call-in-sync-function: # Our code is too beautiful to use it
     no-equal-arguments: false # Too useless
@@ -425,7 +449,7 @@ dart_code_metrics:
     prefer-moving-to-variable: false # We are too lazy to move to variable and sometimes it's too useless
     avoid-border-all: false # Too useless
     prefer-const-border-radius: false # Too useless
-    prefer-extracting-callbacks: false # Too useless
+    prefer-extracting-callbacks: false # We are too lazy to extract callbacks
     avoid-late-keyword: false # Using late is good for us
     prefer-match-file-name: false # We are too lazy to extract all in separate file
     prefer-correct-identifier-length: false # Too useless
@@ -457,4 +481,10 @@ dart_code_metrics:
     prefer-dedicated-media-query-methods: false # We need it
     avoid-missing-image-alt: false # We don't need it
     avoid-nested-conditional-expressions: false # We need this
-    unnecessary-trailing-comma: false # We need to specify this manually
+    unnecessary-trailing-comma: false # We need custom commas
+    move-variable-closer-to-its-usage: false # We need custom position
+    avoid-passing-self-as-argument: false # We need it
+    prefer-getter-over-method: false # Sometimes getter more logic
+    avoid-missing-interpolation: false # We need it
+    parameters-ordering: false # We need custom ordering
+    avoid-recursive-calls: false # We need it
